// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcContainer should make the navigation collapsible when canBeCollapsed is given 1`] = `
<div
  class="ec-container"
>
  <div
    class="ec-container__navigation ec-container__navigation--can-be-collapsed"
  />
   
  <div
    class="ec-container__content"
  />
</div>
`;

exports[`EcContainer should not have a collapsible navigation by default 1`] = `
<div
  class="ec-container"
>
  <div
    class="ec-container__navigation"
  />
   
  <div
    class="ec-container__content"
  />
</div>
`;

exports[`EcContainer should render empty if no slots were given 1`] = `
<div
  class="ec-container"
>
  <div
    class="ec-container__navigation"
  />
   
  <div
    class="ec-container__content"
  />
</div>
`;

exports[`EcContainer should render slot for content 1`] = `
<div
  class="ec-container"
>
  <div
    class="ec-container__navigation"
  />
   
  <div
    class="ec-container__content"
  >
    <div>
      content template
    </div>
  </div>
</div>
`;

exports[`EcContainer should render slot for navigation 1`] = `
<div
  class="ec-container"
>
  <div
    class="ec-container__navigation"
  >
    <div>
      navigation template
    </div>
  </div>
   
  <div
    class="ec-container__content"
  />
</div>
`;
